Don't rewrite the body of function expressions

That is, don't look inside function expressions when rewriting
bindings as closures.

Task-number: QTBUG-25901
Change-Id: Ia4b99d3c58c4482e9505cf2461bd14942a9a00ca
Reviewed-by: Kent Hansen <kent.hansen@nokia.com>